tests/baselines/reference/classExpressionExtendingAbstractClass.errors.txt
tests/cases/compiler/classExpressionExtendingAbstractClass.ts(5,9): error TS18052: Non-abstract class 'C' does not implement all abstract members of 'A'


==== tests/cases/compiler/classExpressionExtendingAbstractClass.ts (1 errors) ====
    abstract class A {
        abstract foo(): void;
    }
    
    var C = class extends A {     // no error reported!
            ~~~~~
!!! error TS18052: Non-abstract class 'C' does not implement all abstract members of 'A'
!!! related TS2653 tests/cases/compiler/classExpressionExtendingAbstractClass.ts:2:14: Non-abstract class expression does not implement inherited abstract member 'foo' from class 'A'.
    };
    
    